--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
   "name": "part-of-this",
+  "author": {
+    "name": "Romelianism"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Romelianism/PartOfThis.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Romelianism/PartOfThis/issues"
+  },
   "version": "0.1.0",
   "private": true,
   "scripts": {
