--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@mantine/core": "^4.0.5",
     "@mantine/hooks": "^4.0.5",
     "@mantine/next": "^4.0.5",
-    "@mui/icons-material": "^5.5.1",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
